--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="utf-8">
   <title>BlogPessoal</title>
@@ -10,14 +11,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap">
-
-
-  
+  <link rel='stylesheet' href='styles.css'>
 
 </head>
+
 <body>
-    <app-root>
+  <app-root>
 
   </app-root>
 </body>
+
 </html>
